chore(build): include storm in include directories

--- a/storm/CMakeLists.txt
+++ b/storm/CMakeLists.txt
@@ -3,3 +3,8 @@ file(GLOB_RECURSE STORM_SOURCES "*.cpp")
 add_library(storm STATIC
     ${STORM_SOURCES}
 )
+
+target_include_directories(storm
+    PRIVATE
+        ${CMAKE_SOURCE_DIR}/storm
+)
