chore(build): prepare for platform-specific files

--- a/storm/CMakeLists.txt
+++ b/storm/CMakeLists.txt
@@ -1,4 +1,14 @@
-file(GLOB_RECURSE STORM_SOURCES "*.cpp")
+file(GLOB STORM_SOURCES
+    "*.cpp"
+)
+
+if(PLATFORM_MAC)
+    file(GLOB STORM_MAC_SOURCES
+        "mac/*.cpp"
+        "mac/*.mm"
+    )
+    list(APPEND STORM_SOURCES ${STORM_MAC_SOURCES})
+endif()
 
 add_library(storm STATIC
     ${STORM_SOURCES}
