feat(thread): add thread functions

--- a/storm/CMakeLists.txt
+++ b/storm/CMakeLists.txt
@@ -1,11 +1,14 @@
 file(GLOB STORM_SOURCES
     "*.cpp"
+    "thread/*.cpp"
 )
 
 if(PLATFORM_MAC)
     file(GLOB STORM_MAC_SOURCES
         "mac/*.cpp"
         "mac/*.mm"
+        "thread/mac/*.cpp"
+        "thread/mac/*.mm"
     )
     list(APPEND STORM_SOURCES ${STORM_MAC_SOURCES})
 endif()
