--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,21 +20,21 @@ set(CMAKE_CXX_STANDARD 11)
 
 # Arch defines
 if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-    set(ARCH_64 1)
+    set(WHOA_ARCH_64 1)
 elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
-    set(ARCH_32 1)
+    set(WHOA_ARCH_32 1)
 endif()
 
 # OS defines
 if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-    set(PLATFORM_WIN 1)
-    add_definitions(-DPLATFORM_WIN)
+    set(WHOA_PLATFORM_WIN 1)
+    add_definitions(-DWHOA_PLATFORM_WIN)
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-    set(PLATFORM_LINUX 1)
-    add_definitions(-DPLATFORM_LINUX)
+    set(WHOA_PLATFORM_LINUX 1)
+    add_definitions(-DWHOA_PLATFORM_LINUX)
 elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-    set(PLATFORM_MAC 1)
-    add_definitions(-DPLATFORM_MAC)
+    set(WHOA_PLATFORM_MAC 1)
+    add_definitions(-DWHOA_PLATFORM_MAC)
 endif()
 
 add_subdirectory(storm)
