--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -36,7 +36,7 @@ jobs:
         run: cd build && cmake .. -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
 
       - name: Build
-        run: cd build && make
+        run: cmake --build build --config ${{ matrix.config.build_type }}
 
       - name: Test
         run: ./build/test/StormTest
