--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -17,14 +17,14 @@ jobs:
           - name: Ubuntu Latest (GCC)
             os: ubuntu-latest
             build_type: Release
-            cc: "gcc"
-            cxx: "g++"
+            cc: gcc
+            cxx: g++
 
-          - name: "macOS Latest (Clang)"
+          - name: macOS Latest (Clang)
             os: macos-latest
-            build_type: "Release"
-            cc: "clang"
-            cxx: "clang++"
+            build_type: Release
+            cc: clang
+            cxx: clang++
 
     steps:
       - uses: actions/checkout@v2
