chore(build): migrate to system lib

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,24 +18,8 @@ project(storm)
 
 set(CMAKE_CXX_STANDARD 11)
 
-# Arch defines
-if(CMAKE_SIZEOF_VOID_P EQUAL 8)
-    set(WHOA_ARCH_64 1)
-elseif(CMAKE_SIZEOF_VOID_P EQUAL 4)
-    set(WHOA_ARCH_32 1)
-endif()
+include(lib/system/cmake/system.cmake)
 
-# OS defines
-if(${CMAKE_SYSTEM_NAME} MATCHES "Windows")
-    set(WHOA_PLATFORM_WIN 1)
-    add_definitions(-DWHOA_PLATFORM_WIN)
-elseif(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
-    set(WHOA_PLATFORM_LINUX 1)
-    add_definitions(-DWHOA_PLATFORM_LINUX)
-elseif(${CMAKE_SYSTEM_NAME} MATCHES "Darwin")
-    set(WHOA_PLATFORM_MAC 1)
-    add_definitions(-DWHOA_PLATFORM_MAC)
-endif()
-
+add_subdirectory(lib)
 add_subdirectory(storm)
 add_subdirectory(test)
