chore(build): suppress invalid-offsetof warnings

--- a/storm/CMakeLists.txt
+++ b/storm/CMakeLists.txt
@@ -36,3 +36,8 @@ target_link_libraries(storm
     PRIVATE
         system
 )
+
+target_compile_options(storm
+    PUBLIC
+        -Wno-invalid-offsetof
+)
