--- a/storm/CMakeLists.txt
+++ b/storm/CMakeLists.txt
@@ -8,12 +8,14 @@ file(GLOB STORM_SOURCES
     "queue/*.cpp"
     "string/*.cpp"
     "thread/*.cpp"
+    "error/*.cpp"
 )
 
 if(WHOA_SYSTEM_WIN)
     file(GLOB STORM_WIN_SOURCES
         "win/*.cpp"
         "thread/win/*.cpp"
+        "error/win/*.cpp"
         )
     list(APPEND STORM_SOURCES ${STORM_WIN_SOURCES})
 endif()
