--- a/storm/CMakeLists.txt
+++ b/storm/CMakeLists.txt
@@ -59,3 +59,8 @@ if(HAS_NO_INVALID_OFFSETOF)
             -Wno-invalid-offsetof
     )
 endif()
+
+if(CMAKE_COMPILER_IS_GNUCXX AND CMAKE_BUILD_TYPE STREQUAL "Debug")
+    include(CodeCoverage)
+    target_compile_options(${PROJECT_NAME} PRIVATE -g -fprofile-arcs -ftest-coverage -O0)
+endif()
