--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -33,4 +33,9 @@ target_include_directories(StormTest
         ${PROJECT_SOURCE_DIR}
 )
 
+if(CMAKE_COMPILER_IS_GNUCXX AND CMAKE_BUILD_TYPE STREQUAL "Debug")
+    include(CodeCoverage)
+    target_compile_options(${PROJECT_NAME} PRIVATE -g -fprofile-arcs -ftest-coverage -O0)
+endif()
+
 install(TARGETS StormTest DESTINATION "bin")
