--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -4,33 +4,42 @@ on: pull_request
 
 jobs:
   build:
-    name: ${{ matrix.config.name }}
-    runs-on: ${{ matrix.config.os }}
+    name: ${{ matrix.flavor.name }} / ${{ matrix.build.os_name }} (${{ matrix.build.compiler_name }})
+    runs-on: ${{ matrix.build.os }}
 
     strategy:
       fail-fast: false
       matrix:
-        config:
-          - name: Ubuntu Latest (GCC)
+        build:
+          - os_name: Ubuntu Latest
+            compiler_name: GCC
             os: ubuntu-latest
             build_type: Release
             test_path: StormTest
             cc: gcc
             cxx: g++
 
-          - name: macOS Latest (Clang)
+          - os_name: macOS Latest
+            compiler_name: Clang
             os: macos-latest
             build_type: Release
             test_path: StormTest
             cc: clang
             cxx: clang++
 
-          - name: Windows Latest (MSVC)
+          - os_name: Windows Latest
+            compiler_name: MSVC
             os: windows-latest
             build_type: Release
             test_path: Release/StormTest
             cc: cl
             cxx: cl
+
+        flavor:
+          - name: WoW
+            define: WOW
+          - name: SC1
+            define: SC1
 
     steps:
       - uses: actions/checkout@v3
@@ -41,10 +50,10 @@ jobs:
         run: mkdir build
 
       - name: Configure
-        run: cd build && cmake .. -DCMAKE_BUILD_TYPE=${{ matrix.config.build_type }}
+        run: cd build && cmake .. -DCMAKE_BUILD_TYPE=${{ matrix.build.build_type }} -DWHOA_STORM_FLAVOR=${{ matrix.flavor.define}}
 
       - name: Build
-        run: cmake --build build --config ${{ matrix.config.build_type }}
+        run: cmake --build build --config ${{ matrix.build.build_type }}
 
       - name: Test
-        run: ./build/test/${{ matrix.config.test_path }}
+        run: ./build/test/${{ matrix.build.test_path }}
