feat(trans): add STrans functions

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -10,6 +10,7 @@ if(WHOA_TEST_STORMDLL)
         Region.cpp
         String.cpp
         Test.cpp
+        Transparency.cpp
     )
 
     if(WHOA_STORMDLL_VERSION GREATER_EQUAL 2003)
@@ -19,6 +20,7 @@ else()
     file(GLOB TEST_SOURCES
         "*.cpp"
         "big/*.cpp"
+        "trans/*.cpp"
     )
 endif()
 
