chore(build): resolve MSVC warnings

--- a/storm/CMakeLists.txt
+++ b/storm/CMakeLists.txt
@@ -43,6 +43,8 @@ add_library(storm STATIC
     ${STORM_SOURCES}
 )
 
+target_compile_definitions(storm PRIVATE _CRT_SECURE_NO_WARNINGS)
+
 target_include_directories(storm
     PUBLIC
         ${PROJECT_SOURCE_DIR}
