feat(test): add support for testing against storm.dll

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,5 +79,10 @@ if(CMAKE_COMPILER_IS_GNUCXX AND CMAKE_BUILD_TYPE STREQUAL "Debug")
     )
 endif()
 
-add_subdirectory(storm)
+if(WHOA_TEST_STORMDLL)
+    add_definitions(-DWHOA_TEST_STORMDLL)
+    add_subdirectory(test/stormdll)
+else()
+    add_subdirectory(storm)
+endif()
 add_subdirectory(test)
