chore(big): run SBig tests against storm.dll

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,7 +1,7 @@
 
 if(WHOA_TEST_STORMDLL)
     set(TEST_SOURCES
-        #Big.cpp
+        Big.cpp
         Core.cpp
         Event.cpp
         EventTest.cpp
