feat(unicode): add 8 SUni functions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ if(WHOA_STORM_FLAVOR STREQUAL "SC1")
 
     add_definitions(-DWHOA_RECT_USES_SCREEN_COORDINATES)
     add_definitions(-DWHOA_SSTRHASH64_SUBTRACTS)
+    add_definitions(-DWHOA_SUPPORTS_KOREAN_CODEPAGE)
 elseif(WHOA_STORM_FLAVOR STREQUAL "WOW")
     message(STATUS "Building Storm with World of Warcraft flavoring")
 else()
