--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -14,7 +14,7 @@ jobs:
           - os_name: Ubuntu Latest
             compiler_name: GCC
             os: ubuntu-latest
-            build_type: Release
+            build_type: Debug
             test_path: StormTest
             cc: gcc
             cxx: g++
@@ -22,7 +22,7 @@ jobs:
           - os_name: macOS Latest
             compiler_name: Clang
             os: macos-latest
-            build_type: Release
+            build_type: Debug
             test_path: StormTest
             cc: clang
             cxx: clang++
@@ -30,8 +30,8 @@ jobs:
           - os_name: Windows Latest
             compiler_name: MSVC
             os: windows-latest
-            build_type: Release
-            test_path: Release/StormTest
+            build_type: Debug
+            test_path: Debug/StormTest
             cc: cl
             cxx: cl
 
@@ -45,6 +45,10 @@ jobs:
       - uses: actions/checkout@v3
         with:
           submodules: true
+
+      - name: Install Dependencies (Ubuntu)
+        run: sudo apt install -y lcov
+        if: matrix.build.os_name == 'Ubuntu Latest'
 
       - name: Prepare
         run: mkdir build
