--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -7,45 +7,45 @@ on:
 
 jobs:
   build:
-    name: ${{ matrix.flavor.name }} / ${{ matrix.build.os_name }} (${{ matrix.build.compiler_name }})
+    name: ${{ matrix.flavor.name }} / ${{ matrix.build.system_name }} / ${{ matrix.build.build_type }} / ${{ matrix.build.compiler_name }}
     runs-on: ${{ matrix.build.os }}
 
     strategy:
       fail-fast: false
       matrix:
-        build:
-          - os_name: Ubuntu Latest
-            compiler_name: GCC
-            os: ubuntu-latest
-            build_type: Release
-            test_path: StormTest
-            cc: gcc
-            cxx: g++
-
-          - os_name: macOS Latest
-            compiler_name: Clang
-            os: macos-latest
-            build_type: Release
-            test_path: StormTest
-            cc: clang
-            cxx: clang++
-
-          - os_name: Windows Latest
-            compiler_name: MSVC
-            os: windows-latest
-            build_type: Release
-            test_path: Release/StormTest
-            cc: cl
-            cxx: cl
-
         flavor:
           - name: WoW
             define: WOW
           - name: SC1
             define: SC1
 
+        build:
+          - system_name: Linux
+            build_type: Release
+            compiler_name: GCC
+            test_path: StormTest
+            os: ubuntu-latest
+            cc: gcc
+            cxx: g++
+
+          - system_name: macOS
+            build_type: Release
+            compiler_name: Clang
+            test_path: StormTest
+            os: macos-latest
+            cc: clang
+            cxx: clang++
+
+          - system_name: Windows
+            build_type: Release
+            compiler_name: MSVC
+            test_path: Release/StormTest
+            os: windows-latest
+            cc: cl
+            cxx: cl
+
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v6
         with:
           submodules: true
 
