chore(file): add sfile/sfilenative backend selection

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,6 +18,9 @@ project(storm)
 
 set(CMAKE_CXX_STANDARD 11)
 
+set(WHOA_SFILE_MODE "NATIVE" CACHE STRING "SFile backend (NATIVE or STORMLIB)")
+set_property(CACHE WHOA_SFILE_MODE PROPERTY STRINGS NATIVE STORMLIB)
+
 list(APPEND CMAKE_MODULE_PATH
     "${CMAKE_CURRENT_SOURCE_DIR}/lib/system/cmake"
     "${CMAKE_CURRENT_SOURCE_DIR}/vendor/cmake-modules"
