--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,9 +1,9 @@
 
 if(WHOA_TEST_STORMDLL)
-    # Note: Error excluded because some functions take more args than expected by older Storms
     set(TEST_SOURCES
         Big.cpp
         Core.cpp
+        Error.cpp
         Event.cpp
         EventTest.cpp
         Memory.cpp
