feat(bitmap): implement SBmp functions for PCX support

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,7 @@
 if(WHOA_TEST_STORMDLL)
     set(TEST_SOURCES
         Big.cpp
+        Bitmap.cpp
         Core.cpp
         Error.cpp
         Event.cpp
