feat(options): add StormGetOption and tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,8 +39,9 @@ if(WHOA_ASSERTIONS_ENABLED)
 endif()
 
 # Storm flavors
-if(WHOA_STORM_FLAVOR STREQUAL "SC1")
+if(WHOA_STORM_FLAVOR MATCHES "(SC1|WC2|D1|D2)")
     message(STATUS "Building Storm with StarCraft flavoring")
+    add_definitions(-DWHOA_FLAVOR_${WHOA_STORM_FLAVOR})
 
     if (WHOA_SYSTEM_MAC OR WHOA_SYSTEM_LINUX)
         add_definitions(-DWHOA_STORM_C_CRIT_SECT_RECURSIVE)
@@ -49,11 +50,18 @@ if(WHOA_STORM_FLAVOR STREQUAL "SC1")
     add_definitions(-DWHOA_RECT_USES_SCREEN_COORDINATES)
     add_definitions(-DWHOA_SSTRHASH64_SUBTRACTS)
     add_definitions(-DWHOA_SUPPORTS_KOREAN_CODEPAGE)
+
+    if(WHOA_STORM_FLAVOR MATCHES "(SC1|WC2|D1)")
+        add_definitions(-DWHOA_TRACKS_ALLOC_COUNTS)
+    endif()
+    add_definitions(-DWHOA_BAD_STORM_OPTION_ALWAYS_SUCCEEDS)
 elseif(WHOA_STORM_FLAVOR STREQUAL "WOW")
     message(STATUS "Building Storm with World of Warcraft flavoring")
+    add_definitions(-DWHOA_FLAVOR_WOW)
     add_definitions(-DWHOA_DISPLAY_ERR_EXTRA_ARG)
 else()
     message(STATUS "Building Storm with default flavoring")
+    add_definitions(-DWHOA_FLAVOR_GENERIC)
     add_definitions(-DWHOA_DISPLAY_ERR_EXTRA_ARG)
 endif()
 
